--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-
+<!-- {% load static %} -->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    <!-- <link rel="stylesheet" href="{% static 'style.css' %}"> -->
     <title>{% block title %} One for all Blogging platform {% endblock %} </title>
 </head>
 
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'news_posts' %}">News articles</a>
+                        <a class="nav-link" href="{% url 'hashnode_posts' %}">Hashnode</a>
 
                     </li>
                     {% if user.is_authenticated %}
