--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body{
 
 /* Article list style start */
 
-.list-item .card a{
+.list-group .card a{
     text-decoration: none;
     color: var(--light-font);
 }
