--- a/blog/templates/blog/tag_detail.html
+++ b/blog/templates/blog/tag_detail.html
@@ -8,8 +8,8 @@
     {{object.title}}
 </h3>
 <hr>
-<div class="col-md-8 ">
-    {% for post in tag_list.post_set.all %}
+<div class="col-md-8 ms-2">
+    {% for post in tag.post_set.all %}
     <div class="card">
         <div class="card-header">
             <p class="blog-post-meta mb-0">{{ post.created_on }} by <a href="">{{post.author.first_name }}
@@ -18,7 +18,7 @@
         <a class="text-decoration-none" href="{% url 'post_detail' post.author post.slug %}">
             <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
-                <p class="card-text">{{ post.content|slice:":200" }}</p>
+                <p class="card-text">{{ post.body_summary }}</p>
                 <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
         </a>
@@ -28,7 +28,7 @@
 
                 <div class="ps-2 pe-2 bd-highlight">
                     <ul class="list-group list-group-horizontal">
-                        <li class="list-item"><a href="{% url 'tag_detail' post.tags.pk %}"><span
+                        <li class="list-item"><a href="{% url 'tag_detail' post.tags %}"><span
                                     class="badge bg-light text-dark">{{ post.tags }}</span></a></li>
                     </ul>
                 </div>
