--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -10,12 +10,40 @@
 </h3>
 <hr>
 {% if user.id == post.author.id %}
-<div class="col-5 ms-4">
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-outline-dark me-2">Save</button>
-</form>
+<div class="ms-4 me-4">
+    {{ form.non_field_errors }}
+    <form class="row g-3" method="POST" action="">{% csrf_token %}
+        <div class="input-group mb-3">
+            {{ form.title.errors }}
+            <span class="input-group-text" id="basic-addon1">Title</span>
+            {{ form.title}}
+        </div>
+        <div class="col-md-12">
+            {{ form.content.errors }}
+            <label for="{{ form.content.id_for_label }}" class="form-label">Content: [ Markdown Supported ] <a
+                    href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target="_blank"><i
+                        class="fas fa-info-circle"></i></a></i></label>
+            
+            {{ form.content }}
+        </div>
+
+        <div class="input-group col-md-3">
+            {{ form.tags.errors }}
+            <span class="input-group-text" id="basic-addon1">Tag</span>
+            <!-- <label for="{{ form.tags.id_for_label }}" class="form-label">Tags</label> -->
+            {{ form.tags }}
+        </div>
+        <div class="col-md-3 input-group">
+            {{ form.status.errors }}
+            <span class="input-group-text" id="basic-addon1">Status</span>
+            <!-- <label for="{{ form.status.id_for_label }}" class="form-label">Status</label> -->
+            {{ form.status }}
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary">Save Post</button>
+        </div>
+    </form>
+    {{ form.media }}
 </div>
 {% else %}
 <strong>You are not allowed to Edit this post. Log in to the account from where the post was created.</strong>
