--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,21 +1,27 @@
 {% extends 'blog/base_home.html' %} 
 {% block title %} {{ post.title }} {% endblock %}
+
+
+
 {% block content %}
 
 <div class="container">
   <div class="row">
     <div class="col-md-8 card mb-4  mt-3 left  top">
-      <div class="card-body">
+      <div class="card-body martor-preview">
         <h1>{{ object.title }}</h1>
-        <p class=" text-muted">{{ post.author }} | {{ post.created_on }}
+        <p class=" text-muted">{{ post.author.get_full_name }} | {{ post.created_on }} 
           {% if user.is_authenticated %} {% if user.id == post.author.id %}
-          <span><a href="{% url 'edit_post' post.author post.slug %}">Edit</a></span> <span><a href="{% url 'delete_post' user post.slug %}">Delete</a></span></p>
+            <span><a href="{% url 'edit_post' post.author post.slug %}"><i class="far fa-edit text-success"></i></a></span> <span><a href="{% url 'delete_post' user post.slug %}"><i class="far fa-trash-alt text-danger"></i></a></span></p>
           {% endif %} {% endif %}
-        <p class="card-text ">{{ object.content | safe }}</p>
+        <hr>
+        <p class="card-text ">{{ post.formatted_markdown|safe }}</p>
       </div>
     </div>
    
   </div>
+
+
 </div>
 
 {% endblock content %}
