--- a/blog/templates/blog/tag_list.html
+++ b/blog/templates/blog/tag_list.html
@@ -9,7 +9,7 @@
 <div class="container">
     <ul class="list-group d-flex flex-wrap col-6">
         {% for tag in tag_list %}
-        <a href="{% url 'tag_detail' tag.pk %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+        <a href="{% url 'tag_detail' tag %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             {{ tag.title }} 
             <span class="badge bg-primary rounded-pill">{{ tag.post_set.all.count }}</span>
         </a>
