--- a/members/templates/registration/change_password_done.html
+++ b/members/templates/registration/change_password_done.html
@@ -7,11 +7,14 @@
     Password Changed Successfully.
 </h3>
 <hr>
-<div class="ms-4 me-4 text-center" >
-    <p >Your password has been changed Successfully.</p>
+<div class="ms-4 me-4 text-center">
+    <p>Your password has been changed Successfully.</p>
     <a href="{% url 'home' %}" class="btn btn-warning  me-2">Go to Homepage</a>
 </div>
 {% else %}
-<strong class="text-center">You are not allowed here.</strong>
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% include 'registration/access_denied.html' %}
 {% endif %}
 {% endblock %}
