--- a/members/templates/registration/password_change.html
+++ b/members/templates/registration/password_change.html
@@ -17,6 +17,9 @@
 </form>
 </div>
 {% else %}
-<strong class="text-center">Login to Change the password.</strong>
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+  Login required to change the Password.
+</div>
 {% endif %}
 {% endblock %}
