--- a/members/templates/registration/password_reset.html
+++ b/members/templates/registration/password_reset.html
@@ -3,7 +3,10 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<strong class="text-center">You are already logged in. Log out to Create new account.</strong>
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
 {% else %}
 <br>
 <h3 class="pb-4 fst text-center">
