--- a/members/templates/registration/password_reset_sent.html
+++ b/members/templates/registration/password_reset_sent.html
@@ -2,6 +2,12 @@
 {% block title %} Password Reset Mail Sent {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% else %}
 <br>
 <h3 class="pb-4 fst text-center">
     Password Reset Mail Sent
@@ -12,4 +18,5 @@
 <small>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.
 </small> 
 </div>
+{% endif %}
 {% endblock %}
