--- a/blog/templates/blog/delete_post.html
+++ b/blog/templates/blog/delete_post.html
@@ -4,17 +4,18 @@
 
 <br>
 <h3 class="pb-4 fst text-center">
-    {{ post.title}}
+    {{ post.title }}
 </h3>
 <hr>
-{% if user.is_authenticated %} {% if user.id == post.author.id %}
+
+{% if user.is_authenticated %} {% if request.user == post.author %}
 
 
 <div class="position-relative text-center border border-1 m-5 p-3 rounded">
     <form action="" method="POST">
         {% csrf_token %}
         <strong>Are you sure you want to delete this post? It can't be undone! </strong>
-        <strong>Instead you can Edit the post status to "Draft".</strong><br><br>
+        <strong>Instead you can change the post status to "Draft".</strong><br><br>
         <button class="btn btn-danger">Delete Post</button>
     </form>
     <hr>
@@ -22,6 +23,16 @@
     <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-secondary">Back</a>
 </div>
 
-{% else %} You are not allowed here {% endif %} {% else %} You are not logged in {% endif %}
+{% else %}
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% include 'registration/access_denied.html' %}
+{% endif %}
+{% else %}
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+    Login required to view this page.
+</div>
+{% endif %}
 {% endblock %}
-
