--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -2,7 +2,9 @@
 {% block title %} {{ user.get_full_name }} : Edit Profile{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
+{% if request.user == user %}
 <br>
+
 <h3 class="pb-4 fst text-center">
     Edit Profile
 </h3>
@@ -15,6 +17,17 @@
     </form>
 </div>
 {% else %}
-<strong class="text-center">Login to edit your profile.</strong>
+
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% include 'registration/access_denied.html' %}
+{% endif %}
+
+{% else %}
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+  Login required to view this page.
+</div>
 {% endif %}
 {% endblock %}
