--- a/members/templates/registration/password_reset_done.html
+++ b/members/templates/registration/password_reset_done.html
@@ -1,13 +1,20 @@
 {% extends "blog/base_home.html" %}
 {% block title %} Password Reset Successfully {% endblock %}
 {% block content %}
+{% if user.is_authenticated %}
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% else %}
 <br>
 <h3 class="pb-4 fst text-center">
     Password Reset Complete
 </h3>
 <hr>
-<div class="ms-4 me-4 text-center" >
-    <small >Your password has been set. You may go ahead and log in now.</small>
-    <br><button href="{% url 'login' %}" class="btn btn-primary">Login</button> 
+<div class="ms-4 me-4 text-center">
+    <small>Your password has been set. You may go ahead and log in now.</small>
+    <br><button href="{% url 'login' %}" class="btn btn-primary">Login</button>
 </div>
+{% endif %}
 {% endblock %}
