--- a/members/templates/registration/password_reset_form.html
+++ b/members/templates/registration/password_reset_form.html
@@ -1,6 +1,12 @@
 {% extends "blog/base_home.html" %}
 {% block title %} Enter New Password {% endblock %}
 {% block content %}
+{% if user.is_authenticated %}
+{% include 'registration/access_denied.html' %}
+<div class="alert alert-danger text-center" role="alert">
+    You are not allowed here. And you know that.
+</div>
+{% else %}
 <br>
 <h3 class="pb-4 fst text-center">
     Enter New Password
@@ -15,4 +21,5 @@
     <button class="btn btn-outline-dark me-2">Change my password</button>
 </form>
 </div>
+{% endif %}
 {% endblock %}
