--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,24 +2,15 @@
 
 {% block content %}
 
-<!-- <div class="container">
+<div class="container">
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">World</a>
-      <a class="p-2 link-secondary" href="#">U.S.</a>
-      <a class="p-2 link-secondary" href="#">Technology</a>
-      <a class="p-2 link-secondary" href="#">Design</a>
-      <a class="p-2 link-secondary" href="#">Culture</a>
-      <a class="p-2 link-secondary" href="#">Business</a>
-      <a class="p-2 link-secondary" href="#">Politics</a>
-      <a class="p-2 link-secondary" href="#">Opinion</a>
-      <a class="p-2 link-secondary" href="#">Science</a>
-      <a class="p-2 link-secondary" href="#">Health</a>
-      <a class="p-2 link-secondary" href="#">Style</a>
-      <a class="p-2 link-secondary" href="#">Travel</a>
+      {% for tag in tag_list %}
+      <a class="p-2 link-secondary" href="{% url 'tag_detail' tag.title %}">{{ tag.title }}</a>
+      {% endfor %}
     </nav>
   </div>
-</div> -->
+</div>
 
 <main class="container">
   <!-- <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
@@ -86,12 +77,12 @@
       <div class="list-group">
         {% for post in page_obj %}
 
-        <div class="card">
+        <div class="card bg-dark text-light">
           <div class="card-header">
-            <p class="blog-post-meta mb-0">{{ post.created_on }} by <a href="">{{post.author.first_name }}
-                {{post.author.last_name }}</a></p>
+           
+            <p class="blog-post-meta mb-0"><a class="text-secondary" href="">{{post.author.get_full_name }}</a> on {{ post.created_on }}.</p>
           </div>
-          <a href="{% url 'post_detail' post.author post.slug %}">
+          <a class="text-light" href="{% url 'post_detail' post.author post.slug %}">
             <div class="card-body">
               <h5 class="card-title">{{ post.title }}</h5>
               <p class="card-text ">{{ post.body_summary }}</p>
@@ -120,6 +111,7 @@
         <br>
         {% endfor %}
       </div>
+      {% if page_obj.has_next %}
       <center>
         <div class="pagination" style="width: fit-content;">
           <span class="step-links">
@@ -139,6 +131,7 @@
         </div>
       </center>
       <hr>
+      {% endif %}
 
 
     </div>
