--- a/blog/templates/blog/tag_detail.html
+++ b/blog/templates/blog/tag_detail.html
@@ -8,42 +8,113 @@
     {{object.title}}
 </h3>
 <hr>
-<div class="col-md-8 ms-2">
-    {% for post in tag.post_set.all %}
-    <div class="card">
-        <div class="card-header">
-            <p class="blog-post-meta mb-0">{{ post.created_on }} by <a href="">{{post.author.first_name }}
-                    {{post.author.last_name }}</a></p>
-        </div>
-        <a class="text-decoration-none" href="{% url 'post_detail' post.author post.slug %}">
-            <div class="card-body">
+<main class="container">
+   
+    <div class="row ">
+      <div class="col-md-7 me-lg-3">
+        <div class="list-group">
+          {% for post in tag.post_set.all %}
+  
+          <div class="card bg-dark text-light">
+            <div class="card-header">
+             
+              <p class="blog-post-meta mb-0"><a class="text-secondary" href="">{{post.author.get_full_name }}</a> on {{ post.created_on }}.</p>
+            </div>
+            <a class="text-light" href="{% url 'post_detail' post.author post.slug %}">
+              <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
-                <p class="card-text">{{ post.body_summary }}</p>
-                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-            </div>
-        </a>
-
-        <div class="card-footer ">
-            <div class="container p-0 d-flex justify-content-around">
-
+                <p class="card-text ">{{ post.body_summary }}</p>
+              </div>
+            </a>
+  
+            <div class="card-footer ">
+              <div class="container p-0 d-flex justify-content-around">
+  
                 <div class="ps-2 pe-2 bd-highlight">
-                    <ul class="list-group list-group-horizontal">
-                        <li class="list-item"><a href="{% url 'tag_detail' post.tags.first %}"><span
-                            class="badge bg-light text-dark">{{ post.tags.first }}</span></a></li>
-                    </ul>
+                  <ul class="list-group list-group-horizontal">
+                      {% for tag in post.tags.all|slice:":2" %}
+                    <li class="list-item"><a href="{% url 'tag_detail' tag.title %}"><span
+                          class="badge bg-light text-dark">{{ tag.title }}</span></a></li>
+                          {% endfor %}
+                  </ul>
                 </div>
                 <div class="ps-2 pe-2 bd-highlight">
-                    <ul class="list-group list-group-horizontal">
-                        <li class="list-item"><i class="far fa-heart"> 20</i></li>
-                        <li class="list-item"><i class="far fa-comments"> 5</i></li>
-
-                    </ul>
+                  <ul class="list-group list-group-horizontal">
+                    <li class="list-item"><i class="far fa-heart"> 20</i></li>
+                    <li class="list-item"><i class="far fa-comments"> 5</i></li>
+  
+                  </ul>
                 </div>
+              </div>
             </div>
+          </div>
+          <br>
+          {% endfor %}
         </div>
+        
+        {% if page_obj.has_next %}
+        <center>
+          <div class="pagination" style="width: fit-content;">
+            <span class="step-links">
+              {% if page_obj.has_previous %}
+              <a href="?page=1" class="page-link" style="display: inline;">&laquo; first</a>
+              <a href="?page={{ page_obj.previous_page_number }}" class="page-link" style="display: inline;">previous</a>
+              {% endif %}
+  
+              <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+              </span> {% if page_obj.has_next %}
+              <a href="?page={{ page_obj.next_page_number }}" class="page-link" style="display: inline;">next</a>
+              <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link" style="display: inline;">last
+                &raquo;</a>
+              {% endif %}
+            </span>
+          </div>
+        </center>
+        <hr>
+        {% endif %}
+        
+  
+  
+      </div>
+  
+      {% block sidebar %}
+      
+      <div class="col-md-4">
+        <br>
+        <div class="position-sticky" style="top: 2rem;">
+          <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fst-italic">About</h4>
+            <p class="mb-0">Welcome to our blog!
+              Here on One for all you can create and share you articles based on any topic. Why wait then sign up and
+              start sharing your interisting articles now.
+            </p>
+          </div>
+  
+          <div class="p-4">
+            <h4 class="fst-italic">Archives</h4>
+            <ol class="list-unstyled mb-0">
+              <li><a href="#">March 2021</a></li>
+              <li><a href="#">February 2021</a></li>
+              <li><a href="#">January 2021</a></li>
+              <li><a href="#">December 2020</a></li>
+              <li><a href="#">November 2020</a></li>
+              <li><a href="#">October 2020</a></li>
+              <li><a href="#">September 2020</a></li>
+              <li><a href="#">August 2020</a></li>
+              <li><a href="#">July 2020</a></li>
+              <li><a href="#">June 2020</a></li>
+              <li><a href="#">May 2020</a></li>
+              <li><a href="#">April 2020</a></li>
+            </ol>
+          </div>
+  
+  
+        </div>
+      </div>
+      {% endblock sidebar %}
     </div>
-    <hr>
-    {% endfor %}
-</div>
+  
+  </main>
 
 {% endblock content %}
